# rental-property-analytics

./: .gitignore  README.md  business_questions.sql  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
data-imports/raw-data/: README.md
data-imports/sh/: ingest_rental_app_sources.ps1
data-imports/sql/: ingest_amenities_changelog.sql  ingest_calendar.sql  ingest_generated_reviews.sql  ingest_listings.sql
macros/: expand_amenities_to_boolean_columns.sql
models/mart/listings_sql/: listings_daily_summary.sql
models/sources/rental_app/: src.amenities_changelog.yml  src_amenities_changelog.yml  src_calendar.yml  src_generated_reviews.yml  src_listings.yml
models/staging/staging_metadata/: stg_amenities_changelog.yml  stg_calendar.yml  stg_generated_reviews.yml  stg_listings.yml
models/staging/staging_sql/: stg_amenities_changelog.sql  stg_calendar.sql  stg_generated_reviews.sql  stg_listings.sql
snapshots/point_in_time/listings/: listings_snapshot.sql
