[tool.poetry]
name = "rental-property-analytics"
version = "0.1.0"
description = "A dbt-based data transformation pipeline for rental property management analytics."
authors = ["Matthew Lim <lim.k.matthew@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python= "^3.11"
dbt-core = "1.7.*" #1.8 is the latest version as of week starting 9/22/2024
dbt-snowflake = "1.7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
